Fix - breaklines on mobile preserved

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1798,14 +1798,6 @@ input, select, textarea {
 
 		}
 
-	@media screen and (max-width: 980px) {
-
-		header br {
-			display: none;
-		}
-
-	}
-
 /* Form */
 
 	form {
